drop jvmopts from gradle tests